services/proxmox/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxmox
  namespace: proxmox
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Proxmox
    gethomepage.dev/description: Virtualizacion (clúster Proxmox VE)
    gethomepage.dev/group: Infraestructura
    gethomepage.dev/icon: proxmox.png
    gethomepage.dev/href: https://proxmox.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - proxmox.bonchan.org
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: proxmox
          port: 8006
