services/proxmox/securitypolicy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: proxmox-oidc
  namespace: proxmox
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: proxmox
  oidc:
    provider:
      issuer: "https://authentik.bonchan.org/application/o/proxmox/"
    clientID: proxmox
    clientSecret:
      name: proxmox-oidc-secret
    redirectURL: "https://proxmox.bonchan.org/oauth2/callback"
    logoutPath: "/logout"
